更新 模型声明 bug 2

--- a/src/tests/demo.ipynb
+++ b/src/tests/demo.ipynb
@@ -27,9 +27,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661343343\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n')]\n",
-      "[('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661343343\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n')]\n",
-      "[('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661343343\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n'), ('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661343343\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n'), ('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661343343\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n'), ('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661343343\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n')]\n"
+      "[('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661346789\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n')]\n",
+      "[('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661346789\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n')]\n",
+      "[('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661346789\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n'), ('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661346789\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n'), ('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661346789\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n'), ('set UPPAAL_COMPILE_ONLY=&&D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661346789\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n')]\n"
      ]
     }
    ],
@@ -69,9 +69,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verify with for loop, time usage 7.731590986251831\n",
-      "Verify with multi-threads, time usage 2.2852656841278076\n",
-      "Verify with multi-process, time usage 3.302170753479004\n"
+      "Verify with for loop, time usage 7.885915279388428\n",
+      "Verify with multi-threads, time usage 2.148256540298462\n",
+      "Verify with multi-process, time usage 3.1685283184051514\n"
      ]
     }
    ],
@@ -148,21 +148,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "can't set attribute",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\OneDrive\\Programs\\pyuppaal-master\\pyuppaal\\src\\tests\\demo.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/OneDrive/Programs/pyuppaal-master/pyuppaal/src/tests/demo.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m observe_actions \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mexit1\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mexit2\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mexit3\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/OneDrive/Programs/pyuppaal-master/pyuppaal/src/tests/demo.ipynb#W6sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m focused_actions \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mset\u001b[39m(hidden_actions\u001b[39m+\u001b[39minput_actions\u001b[39m+\u001b[39mobserve_actions))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/OneDrive/Programs/pyuppaal-master/pyuppaal/src/tests/demo.ipynb#W6sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m umod\u001b[39m.\u001b[39;49mfind_a_pattern(inputs, observations, observe_actions\u001b[39m=\u001b[39;49mobserve_actions, focused_actions\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m, hold\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n",
-      "File \u001b[1;32md:\\onedrive\\programs\\pyuppaal-master\\pyuppaal\\src\\pyuppaal\\umodel.py:321\u001b[0m, in \u001b[0;36mUModel.find_a_pattern\u001b[1;34m(self, inputs, observes, observe_actions, focused_actions, hold, options)\u001b[0m\n\u001b[0;32m    318\u001b[0m \u001b[39m# 设置路径\u001b[39;00m\n\u001b[0;32m    319\u001b[0m \u001b[39m# 新模型路径，不覆盖原模型\u001b[39;00m\n\u001b[0;32m    320\u001b[0m new_model_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39msplitext(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel_path)[\u001b[39m0\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_pattern.xml\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m--> 321\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcopy_as(new_model_path\u001b[39m=\u001b[39mnew_model_path)\n\u001b[0;32m    322\u001b[0m new_umodel \u001b[39m=\u001b[39m UModel(new_model_path)\n\u001b[0;32m    323\u001b[0m \u001b[39m# 将要保存的path路径\u001b[39;00m\n\u001b[0;32m    324\u001b[0m \u001b[39m# trace_path = f\"{new_model_path.replace('.xml', '')}\"\u001b[39;00m\n",
-      "File \u001b[1;32md:\\onedrive\\programs\\pyuppaal-master\\pyuppaal\\src\\pyuppaal\\umodel.py:61\u001b[0m, in \u001b[0;36mUModel.save_as\u001b[1;34m(self, new_model_path)\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(new_model_path, \u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m     60\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__element_tree\u001b[39m.\u001b[39mwrite(new_model_path, encoding\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m, xml_declaration\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m---> 61\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel_path \u001b[39m=\u001b[39m new_model_path\n\u001b[0;32m     62\u001b[0m \u001b[39mreturn\u001b[39;00m UModel(new_model_path)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: can't set attribute"
-     ]
+     "data": {
+      "text/plain": [
+       "('E<> Monitor0.pass',\n",
+       " ['input_ball',\n",
+       "  'input_ball',\n",
+       "  'hidden_path1',\n",
+       "  'hidden_path3',\n",
+       "  'exit1',\n",
+       "  'input_ball',\n",
+       "  'input_ball',\n",
+       "  'hidden_path1',\n",
+       "  'hidden_path4',\n",
+       "  'exit2'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -181,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,25 +196,29 @@
       "text/plain": [
        "[('E<> Monitor0.pass',\n",
        "  ['input_ball',\n",
+       "   'input_ball',\n",
        "   'hidden_path1',\n",
        "   'hidden_path3',\n",
        "   'exit1',\n",
+       "   'input_ball',\n",
        "   'input_ball',\n",
        "   'hidden_path1',\n",
        "   'hidden_path4',\n",
        "   'exit2']),\n",
        " ('E<> Monitor0.pass && !Monitor1.pass',\n",
        "  ['input_ball',\n",
+       "   'input_ball',\n",
        "   'hidden_path1',\n",
        "   'hidden_path3',\n",
        "   'exit1',\n",
+       "   'input_ball',\n",
        "   'input_ball',\n",
        "   'hidden_path2',\n",
        "   'hidden_path5',\n",
        "   'exit2'])]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +257,7 @@
        " ['pCheckLight', 'pRed', 'cCheckLight', 'cGreen'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,26 +271,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['pRed',\n",
-       " 'pFinish',\n",
-       " 'cRed',\n",
-       " 'pGreen',\n",
-       " 'cGreen',\n",
+       "['cRed',\n",
        " 'cCheckLight',\n",
-       " 'pCheckLight',\n",
-       " 'pYellow',\n",
        " 'cYellow',\n",
+       " 'pYellow',\n",
        " 'cCrss',\n",
+       " 'pCheckLight',\n",
+       " 'pGreen',\n",
+       " 'pFinish',\n",
+       " 'cGreen',\n",
+       " 'pRed',\n",
        " 'pCrss']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +325,7 @@
        "  ['pCheckLight', 'pYellow', 'pCrss', 'cCrss'])]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -396,55 +407,55 @@
       "-------------------------------------\n",
       "['--diagnostic', '0', '--search-order', '0']\n",
       "diagnostic: 0-Some trace; search_order: 0-Breadth first (short-hand -b);\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'pCrss', 'cCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '0', '--search-order', '1']\n",
       "diagnostic: 0-Some trace; search_order: 1-Depth first (short-hand -d);\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['cGreen', 'pCheckLight', 'pRed'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['cCrss', 'pCheckLight', 'pRed', 'pCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '0', '--search-order', '2']\n",
       "diagnostic: 0-Some trace; search_order: 2-Random depth first;\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pYellow', 'cGreen'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pYellow', 'pCrss', 'cCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '1', '--search-order', '0']\n",
       "diagnostic: 1-Shortest trace (disables reuse); search_order: 0-Breadth first (short-hand -b);\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'pCrss', 'cCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '1', '--search-order', '1']\n",
       "diagnostic: 1-Shortest trace (disables reuse); search_order: 1-Depth first (short-hand -d);\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['cGreen', 'pCheckLight', 'pRed'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['cCrss', 'pCheckLight', 'pRed', 'pCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '1', '--search-order', '2']\n",
       "diagnostic: 1-Shortest trace (disables reuse); search_order: 2-Random depth first;\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['cGreen', 'pCheckLight', 'pRed'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'pCrss', 'cCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '1', '--search-order', '3']\n",
       "diagnostic: 1-Shortest trace (disables reuse); search_order: 3-Optimal first (requires -t1 or -t2);\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['cGreen', 'pCheckLight', 'pRed'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'pCrss', 'cCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '1', '--search-order', '4']\n",
       "diagnostic: 1-Shortest trace (disables reuse); search_order: 4-Random optimal depth first (requires -t1 or -t2);\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'pCrss', 'cCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '2', '--search-order', '0']\n",
       "diagnostic: 2-Fastest trace (disables reuse); search_order: 0-Breadth first (short-hand -b);\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'pCrss', 'cCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '2', '--search-order', '1']\n",
       "diagnostic: 2-Fastest trace (disables reuse); search_order: 1-Depth first (short-hand -d);\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['cGreen', 'pCheckLight', 'pRed'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['cCrss', 'pCheckLight', 'pRed', 'pCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '2', '--search-order', '2']\n",
       "diagnostic: 2-Fastest trace (disables reuse); search_order: 2-Random depth first;\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['cCrss', 'pCheckLight', 'pRed', 'pCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '2', '--search-order', '3']\n",
       "diagnostic: 2-Fastest trace (disables reuse); search_order: 3-Optimal first (requires -t1 or -t2);\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'pCrss', 'cCrss'])\n",
       "-------------------------------------\n",
       "['--diagnostic', '2', '--search-order', '4']\n",
       "diagnostic: 2-Fastest trace (disables reuse); search_order: 4-Random optimal depth first (requires -t1 or -t2);\n",
-      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n"
+      "('E<> (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'pCrss', 'cCrss'])\n"
      ]
     }
    ],
