--- a/src/tests/demo.ipynb
+++ b/src/tests/demo.ipynb
@@ -9,22 +9,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "sys.path.append('/Users/22215/OneDrive/Coding/PlayGround/Github/pyuppaal/src/pyuppaal')\n",
+    "# import sys\n",
+    "# sys.path.append('/Users/22215/OneDrive/Coding/PlayGround/Github/pyuppaal/src/pyuppaal')\n",
     "import time\n",
     "import pyuppaal as pyu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870958\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n')]\n",
+      "[('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870958\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n')]\n",
+      "[('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870958\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n'), ('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870958\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n'), ('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870958\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n'), ('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870958\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n')]\n"
+     ]
+    }
+   ],
    "source": [
     "# You MUST set the verifyta path firstly!\n",
     "pyu.set_verifyta_path(r'C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe')\n",
@@ -53,21 +63,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'p1_model_path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\22215\\OneDrive\\Coding\\PlayGround\\Github\\pyuppaal\\src\\tests\\demo.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/PlayGround/Github/pyuppaal/src/tests/demo.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m model_path_list \u001b[39m=\u001b[39m [p1_model_path, p2_model_path] \u001b[39m*\u001b[39m \u001b[39m100\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/PlayGround/Github/pyuppaal/src/tests/demo.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m trace_path_list \u001b[39m=\u001b[39m [p1_trace_path, p2_trace_path] \u001b[39m*\u001b[39m \u001b[39m100\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/22215/OneDrive/Coding/PlayGround/Github/pyuppaal/src/tests/demo.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# for loop\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'p1_model_path' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870962\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n')]\n",
+      "[('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870962\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n')]\n",
+      "[('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870962\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n'), ('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870962\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n'), ('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -X verifyta_demo1_trace verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870962\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: verifyta_demo1_trace1.xml\\n'), ('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -f verifyta_demo2_trace verifyta_demo2.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1661870962\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n')]\n"
      ]
     }
    ],
+   "source": [
+    "\"\"\"\n",
+    "NEW VERSION without verifyta\n",
+    "\"\"\"\n",
+    "\n",
+    "# You MUST set the verifyta path firstly!\n",
+    "pyu.set_verifyta_path(r'C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe')\n",
+    "\n",
+    "# verify P1 (verifyta_demo1.xml), save .xml file and print result\n",
+    "p1_model_path = 'verifyta_demo1.xml'\n",
+    "p1_trace_path = 'verifyta_demo1_trace.xml'\n",
+    "res1 = pyu.simple_verify(model_path=p1_model_path, trace_path=p1_trace_path)\n",
+    "print(res1)\n",
+    "\n",
+    "# verify P2 (verifyta_demo2.xml), save .xtr file and print result\n",
+    "p2_model_path = 'verifyta_demo2.xml'\n",
+    "p2_trace_path = 'verifyta_demo2_trace.xtr'\n",
+    "res2 = pyu.simple_verify(model_path=p2_model_path, trace_path=p2_trace_path)\n",
+    "print(res2)\n",
+    "\n",
+    "#  use mutithreads verify model list\n",
+    "model_path_list = [p1_model_path, p2_model_path] * 2\n",
+    "trace_path_list = [p1_trace_path, p2_trace_path] * 2\n",
+    "res3 = pyu.simple_verify(model_path=model_path_list, trace_path=trace_path_list, parallel='threads')\n",
+    "print(res3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model_path_list = [p1_model_path, p2_model_path] * 100\n",
     "trace_path_list = [p1_trace_path, p2_trace_path] * 100\n",
@@ -136,6 +176,52 @@
     "\n",
     "# load timed trace -> SimTrace，读取一个xtr文件，生成一个SimTrace类的实例\n",
     "simtracer = Tracer.get_timed_trace(p1_model_path, p1_trace_path,hold=True)\n",
+    "print(simtracer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State [0]: ['P2.A']\n",
+      "global_variables [0]: []\n",
+      "Clock_constraints [0]: [t(0) - P2.t ≤ 0; P2.t - t(0) ≤ 10; ]\n",
+      "transitions [0]: None: P2.A -> P2.B\n",
+      "-----------------------------------\n",
+      "State [1]: ['P2.B']\n",
+      "global_variables [1]: []\n",
+      "Clock_constraints [1]: [t(0) - P2.t ≤ -10; P2.t - t(0) ≤ 10; ]\n",
+      "transitions [1]: None: P2.B -> P2.C\n",
+      "-----------------------------------\n",
+      "State [2]: ['P2.C']\n",
+      "global_variables [2]: []\n",
+      "Clock_constraints [2]: [t(0) - P2.t ≤ -10; P2.t - t(0) ≤ 20; ]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "NEW VERSION without verifyta\n",
+    "\"\"\"\n",
+    "\n",
+    "import pyuppaal as pyu\n",
+    "\n",
+    "# You MUST set the verifyta path firstly!\n",
+    "pyu.set_verifyta_path(r'C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe')\n",
+    "\n",
+    "# v = pyu.Verifyta()\n",
+    "# model path and trace path\n",
+    "p1_model_path = 'verifyta_demo2.xml'\n",
+    "p1_trace_path = 'verifyta_demo2_trace-1.xtr'\n",
+    "\n",
+    "# load timed trace -> SimTrace，读取一个xtr文件，生成一个SimTrace类的实例\n",
+    "simtracer = pyu.get_timed_trace(p1_model_path, p1_trace_path,hold=True)\n",
     "print(simtracer)"
    ]
   },
@@ -221,6 +307,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('E<> Monitor0.pass',\n",
+       " ['input_ball',\n",
+       "  'input_ball',\n",
+       "  'hidden_path1',\n",
+       "  'hidden_path3',\n",
+       "  'exit1',\n",
+       "  'input_ball',\n",
+       "  'input_ball',\n",
+       "  'hidden_path1',\n",
+       "  'hidden_path4',\n",
+       "  'exit2'])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "NEW VERSION without umodel\n",
+    "\"\"\"\n",
+    "\n",
+    "model_path = 'pyuppaal_demo_PipeNet.xml'\n",
+    "inputs = pyu.TimedActions(actions=['input_ball', 'input_ball'], lb=[0, 1000], ub=[0,1000])\n",
+    "observations = pyu.TimedActions(actions=['exit1', 'exit2'], lb=[500, 1550], ub=[500, 1550])\n",
+    "hidden_actions = ['hidden_path1', 'hidden_path2', 'hidden_path3', 'hidden_path4', 'hidden_path5', 'hidden_path6']\n",
+    "input_actions = ['input_ball']\n",
+    "observe_actions = ['exit1','exit2','exit3']\n",
+    "focused_actions = list(set(hidden_actions+input_actions+observe_actions))\n",
+    "pyu.find_a_pattern(model_path, inputs, observations, observe_actions=observe_actions, focused_actions=None, hold=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -297,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Find_all_pattern"
+    "# Find_all_patterns"
    ]
   },
   {
@@ -330,6 +457,38 @@
     "query = f'E<> (PPedestrian.Crossing and PCar.Crossing)' # property query\n",
     "focused_actions = [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"] # focused actions\n",
     "umod.find_all_patterns_with_query(query=query, focused_actions=focused_actions, hold=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('E<> (PPedestrian.Crossing and PCar.Crossing)',\n",
+       "  ['pCheckLight', 'pRed', 'pCrss', 'cCrss']),\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass',\n",
+       "  ['cCrss', 'pCheckLight', 'pRed', 'pCrss']),\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass',\n",
+       "  ['pCheckLight', 'pGreen', 'pCrss', 'cCrss']),\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass && !Monitor3.pass',\n",
+       "  ['pCheckLight', 'pYellow', 'pCrss', 'cCrss'])]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "NEW VERSION without umodel\n",
+    "\"\"\"\n",
+    "import pyuppaal as pyu\n",
+    "pyu.set_verifyta_path(r'C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe')\n",
+    "pyu.find_all_patterns_with_query('Pedestrian_new.xml',f'E<> (PPedestrian.Crossing and PCar.Crossing)', [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"], hold=True)"
    ]
   },
   {
